[gd_scene load_steps=6 format=3 uid="uid://crc5ol4wp54lw"]

[ext_resource type="Theme" uid="uid://bq5t78xyahj5w" path="res://resources/themes/hud_theme.tres" id="1_idlys"]
[ext_resource type="Script" path="res://scripts/UI/hud.gd" id="2_v1djy"]
[ext_resource type="Texture2D" uid="uid://d1xsc2u5hb3nl" path="res://textures/UI/power.png" id="3_kpie2"]
[ext_resource type="Texture2D" uid="uid://dagcmcbgn8prt" path="res://textures/UI/power_usage.png" id="4_fvmhf"]
[ext_resource type="PackedScene" uid="uid://btg2jwly16nqo" path="res://scenes/UI/shop.tscn" id="5_nphgn"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_idlys")
script = ExtResource("2_v1djy")

[node name="Topbar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 96.0
grow_horizontal = 2

[node name="PowerPanel" type="PanelContainer" parent="Topbar"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Topbar/PowerPanel"]
layout_mode = 2

[node name="PowerIcon" type="TextureRect" parent="Topbar/PowerPanel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_kpie2")
expand_mode = 3

[node name="PowerLabel" type="Label" parent="Topbar/PowerPanel/HBoxContainer"]
layout_mode = 2
text = "1984"

[node name="VSeparator" type="VSeparator" parent="Topbar"]
layout_mode = 2

[node name="UsagePanel" type="PanelContainer" parent="Topbar"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Topbar/UsagePanel"]
layout_mode = 2

[node name="UsageIcon" type="TextureRect" parent="Topbar/UsagePanel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_fvmhf")
expand_mode = 3

[node name="UsageLabel" type="Label" parent="Topbar/UsagePanel/HBoxContainer"]
layout_mode = 2
text = "6969"

[node name="UsageUnits" type="Label" parent="Topbar/UsagePanel/HBoxContainer"]
layout_mode = 2
text = "/s"

[node name="ShopButton" type="Button" parent="Topbar"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 10
text = ">Build<"

[node name="VSeparator2" type="VSeparator" parent="Topbar"]
layout_mode = 2

[node name="shop" parent="." instance=ExtResource("5_nphgn")]
layout_mode = 1
mouse_filter = 1

[node name="Blackout" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="Topbar/ShopButton" to="." method="_on_shop_button_pressed"]
